--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ develop-eggs/
 dist/
 downloads/
 data_extraction/api_configuration
+resources/movielix-36036-c50612a3eafd.json
+resources/movies.csv
+resources/cleaned_movies.csv
+resources/Untitled.ipynb
 eggs/
 .eggs/
 lib/
