--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ build/
 develop-eggs/
 dist/
 downloads/
+data_extraction/api_configuration/
+resources/movielix-36036-c50612a3eafd.json
+resources/movies.csv
+resources/cleaned_movies.csv
+resources/Untitled.ipynb
 eggs/
 .eggs/
 lib/
@@ -46,7 +51,8 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
-
+.DS_Store
+.idea/
 # Translations
 *.mo
 *.pot
